2002-04-04  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/op_start: fix bash1 detection

	* doc/Makefile.in: fix install target

2002-03-25  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: some preliminary stuff for NGPT

	* TODO: update

	* doc/Makefile.in:
	* doc/oprofile.sgml:
	* doc/oprofile.xml: move to DocBook/XML

	* doc/oprofile.xml: document Bash 2 dependency
 
	* dae/op_start: fix for /bin/bash being bash v1 - untested
 
2002-04-02  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oprofpp.cpp:
	* pp/oprofp_util.cpp: debug and use opp_bfd::symbol_size()

2002-03-30  Philippe Elie  <phil.el@wanadoo.fr>

	* ChangeLog: change my email address

2002-03-22  Philippe Elie  <ph_e@club-internet.fr>

	* dae/op_start: default buffer size to zero and let module
	  override the default.

	* module/op_rtc.c:
	* module/oprofile.h:
	* op_user.h:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h: an another coherency fix, unhopefully
	  this bug fix does not fix the configuration file (see # )

	* pp/oprofpp.cpp: for gprof dump do not print events settings

	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: prepare using symbol size

2002-03-21  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp;
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: factorize event settings output
	* pp/oprofpp.h: ditto + do_list_xxx/do_dump_gprof : static
	  free function rather than member function.

2002-03-21  Philippe Elie  <ph_e@club-internet.fr>

	* op_user.h:
	* pp/oprofpp.h: more doxygen comments

	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/opd_util.c:
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp: exit(): use {EXIT_FAILURE|EXIT_SUCCESS}

2002-03-20  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h: simplify slightly interface of samples_files_t
	* oprof_report/oprof_report.cpp:
	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/oprofp.cpp: reflect the new interface.
