@@ -70,8 +70,8 @@ void oprof_report::load_samples_files(const string & filename)
 	try {
 		opp_samples_files samples_file(temp_filename, counter);
 
-		opp_bfd abfd(samples_file.header[samples_file.first_file],
-			     samples_file.nr_samples,
+		opp_bfd abfd(samples_file.first_header(), 
+			     samples_file.nr_samples, 
 			     demangle_filename(app_name));
 
 		// we defer clearing the view after ensuring than nothing
