@@ -615,7 +615,7 @@ static void output_symbols_count(map_t& files, int counter)
 			opp_samples_files samples_file(samples_filename,
 						       counter);
 
-			opp_bfd abfd(samples_file.header[samples_file.first_file],
+			opp_bfd abfd(samples_file.first_header(),
 				     samples_file.nr_samples, image_name);
 
 			samples.add(samples_file, abfd);
