@@ -370,9 +370,12 @@ bool output::setup_counter_param(const opp_samples_files & samples_files)
 			continue;
 
 		counter_info[i].enabled = true;
-		counter_info[i].ctr_event = samples_files.header[i]->ctr_event;
-		counter_info[i].unit_mask = samples_files.header[i]->ctr_um;
-		counter_info[i].event_count_sample = samples_files.header[i]->ctr_count;
+
+		const struct opd_header * header =
+			samples_files.samples[i]->header;
+		counter_info[i].ctr_event = header->ctr_event;
+		counter_info[i].unit_mask = header->ctr_um;
+		counter_info[i].event_count_sample = header->ctr_count;
 
 		have_counter_info = true;
 	}
@@ -813,7 +816,7 @@ bool output::treat_input(const string & image_name, const string & sample_file)
 	// this order of declaration is required to ensure proper
 	// initialisation of oprofpp
 	opp_samples_files samples_files(sample_file, counter_mask);
-	opp_bfd abfd(samples_files.header[samples_files.first_file],
+	opp_bfd abfd(samples_files.first_header(),
 		     samples_files.nr_samples, image_name);
 
 	if (!assembly && !abfd.have_debug_info()) {
@@ -822,8 +825,8 @@ bool output::treat_input(const string & image_name, const string & sample_file)
 		exit(EXIT_FAILURE);
 	}
 
-	cpu_speed = samples_files.header[samples_files.first_file]->cpu_speed;
-	uint tmp = samples_files.header[samples_files.first_file]->cpu_type;
+	cpu_speed = samples_files.first_header()->cpu_speed;
+	uint tmp = samples_files.first_header()->cpu_type;
 	cpu_type = static_cast<op_cpu>(tmp);
 
 	samples->add(samples_files, abfd);
